--- a/consignment-service/Makefile
+++ b/consignment-service/Makefile
@@ -5,7 +5,10 @@ build:
 	docker build -t microservice-example .
 
 run:
-	docker run -p 50051:50051 microservice-example
+	docker run -p 50051:50051 \
+	-e MICRO_SERVER_ADDRESS=:50051 \
+	microservice-example	
+
 
 #build:
 #    protoc -I. --go_out=plugins=grpc:. \
